nesc-frontend/src/test/resources/integration/programs/bad/bad05/C.nc
/* A structure type referencing itself in a field. */

struct s
{
   long long int n;
   struct s nested;
};

configuration C
{
}
implementation
{
}
